--- a/src/view/main_screen.kv
+++ b/src/view/main_screen.kv
@@ -1,6 +1,6 @@
 #:kivy 1.0
 
-#:import main_menu src.view.main_screen
+#:import main_screen src.view.main_screen
 
 # This script is written in kv script language
 # which makes our implementation a bit easier.
