Prep to merge w/ master

--- a/src/view/login_screen.kv
+++ b/src/view/login_screen.kv
@@ -64,7 +64,7 @@ LoginScreenRoot:
             TextInput:
                 id: host
                 multiline: False
-                text: ''
+                text: 'localhost'
 
             Widget: # empty widget
                 size_hint_x: None
