--- a/src/screens/login_screen.kv
+++ b/src/screens/login_screen.kv
@@ -1,6 +1,6 @@
 #:kivy 1.0
 
-#:import login_screen src.view.main_screen
+#:import login_screen src.screens.main_screen
 
 # This script is written in kv script language
 # which makes our implementation a bit easier.
