--- a/src/screens/curriculum_dashboard_screen.kv
+++ b/src/screens/curriculum_dashboard_screen.kv
@@ -1,6 +1,7 @@
 #:kivy 1.0
 
 #:import login_screen src.screens.main_screen
+#:import tree_widgets src.widgets.tree_widgets
 
 # This script is written in kv script language
 # which makes our implementation a bit easier.
@@ -9,68 +10,28 @@
 # https://kivy.org/doc/stable/guide/lang.html
 #
 
-LoginScreenRoot:
-    AnchorLayout
-        center: (root.center_x, root.center_y + 98)
-        size: (80, 40)
+CurriculumDashboardScreenRoot:
 
-        Label:
-            font_size: '36sp'
-            text: 'Curricula DB'
+    BoxLayout:
+        id: frame
+        orientation: 'horizontal'
+        size: root.size
 
+        TestTreeWidget:
+            id: tv
+
+        StackLayout:
+            Button:
+                text: 'course description here'
 
     AnchorLayout:
-        center: root.center
-        size: (320, 160)
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        size: (100, 40)
+        padding: 10
 
-        GridLayout
-            rows: 4
-            cols: 2
-            padding: 5
-            spacing: 8
-
-            Label:
-                size_hint_x: None
-                width: 80
-                text: 'Username:'
-                text_size: self.size
-                halign: 'right'
-                valign: 'middle'
-            TextInput:
-                id: username
-                multiline: False
-                text: ''
-
-            Label:
-                size_hint_x: None
-                width: 80
-                text: 'Password:'
-                text_size: self.size
-                halign: 'right'
-                valign: 'middle'
-            TextInput:
-                id: password
-                multiline: False
-                password: True
-                text: ''
-
-            Label:
-                size_hint_x: None
-                width: 80
-                text: 'Host:'
-                text_size: self.size
-                halign: 'right'
-                valign: 'middle'
-            TextInput:
-                id: host
-                multiline: False
-                text: 'localhost'
-
-            Widget: # empty widget
-                size_hint_x: None
-                width: 80
-
-            Button:
-                text: 'Login'
-                on_press: root.login_callback()
-
+        Button:
+            size_hint: (None, None)
+            size: (100, 30)
+            text: 'Back'
+            on_press: root.back_callback()
