--- a/src/screens/add_new_screen.kv
+++ b/src/screens/add_new_screen.kv
@@ -9,7 +9,7 @@
 # https://kivy.org/doc/stable/guide/lang.html
 #
 
-MainScreenRoot:
+AddNewScreenRoot:
     AnchorLayout:
         anchor_x: 'left'
         anchor_y: 'bottom'
@@ -20,31 +20,38 @@ MainScreenRoot:
             size_hint: (None, None)
             size: (100, 30)
             text: 'Back'
-            on_press: root.logout_callback()
+            on_press: root.back_callback()
 
     AnchorLayout:
         center: root.center
         size: (400, 200)
 
         GridLayout
-            rows: 4
+            rows: 6
             cols: 1
             padding: 5
             spacing: 8
 
             Button:
-                text: 'Add New'
-                on_press: root.add_new_callback()
+                text: 'New Curriculum'
+                on_press: root.add_curriculum_callback()
 
             Button:
-                text: 'Curriculum Dashboard'
-                on_press: root.curriculum_dashboard_callback()
+                text: 'New Topic'
+                on_press: root.add_topic_callback()
 
             Button:
-                text: 'Course Dashboard'
-                on_press: root.course_dashboard_callback()
+                text: 'New Course'
+                on_press: root.add_course_callback()
 
             Button:
-                text: 'Course Statistics'
-                on_press: root.course_stats_callback()
+                text: 'New Section'
+                on_press: root.add_section_callback()
 
+            Button:
+                text: 'New Person'
+                on_press: root.add_person_callback()
+
+            Button:
+                text: 'New Goal'
+                on_press: root.add_goal_callback()
