--- a/src/screens/login_screen.kv
+++ b/src/screens/login_screen.kv
@@ -12,7 +12,7 @@
 LoginScreenRoot:
     AnchorLayout
         center: (root.center_x, root.center_y + 98)
-        size: (80, 40)
+        size: (dp(80), dp(40))
 
         Label:
             font_size: '36sp'
@@ -21,17 +21,17 @@ LoginScreenRoot:
 
     AnchorLayout:
         center: root.center
-        size: (320, 160)
+        size: (dp(320), dp(160))
 
         GridLayout
             rows: 4
             cols: 2
-            padding: 5
-            spacing: 8
+            padding: dp(5)
+            spacing: dp(8)
 
             Label:
                 size_hint_x: None
-                width: 80
+                width: dp(80)
                 text: 'Username:'
                 text_size: self.size
                 halign: 'right'
@@ -43,7 +43,7 @@ LoginScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: 80
+                width: dp(80)
                 text: 'Password:'
                 text_size: self.size
                 halign: 'right'
@@ -56,7 +56,7 @@ LoginScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: 80
+                width: dp(80)
                 text: 'Host:'
                 text_size: self.size
                 halign: 'right'
@@ -68,7 +68,7 @@ LoginScreenRoot:
 
             Widget: # empty widget
                 size_hint_x: None
-                width: 80
+                width: dp(80)
 
             Button:
                 text: 'Login'
