--- a/src/screens/login_screen.kv
+++ b/src/screens/login_screen.kv
@@ -11,7 +11,7 @@
 
 LoginScreenRoot:
     AnchorLayout
-        center: (root.center_x, root.center_y + 98)
+        center: (root.center_x, root.center_y + dp(98))
         size: (dp(80), dp(40))
 
         Label:
