working on curriculum

--- a/src/screens/new_curriculum_screen.kv
+++ b/src/screens/new_curriculum_screen.kv
@@ -60,7 +60,7 @@ NewCurriculumScreenRoot:
             Label:
                 size_hint_x: None
                 width: 300
-                text: 'Curriculum Topics'
+                text: 'IDs of Curriculum Topics'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
