--- a/src/screens/curriculum_dashboard_screen.kv
+++ b/src/screens/curriculum_dashboard_screen.kv
@@ -71,6 +71,15 @@ CurriculumDashboardScreenRoot:
                 id: description_field
                 text: ''
 
+            InteractiveTreeWidget:
+                id: topics_tree
+
+            Label:
+                size: self.texture_size
+                text_size: self.size
+                id: description_field_lower
+                text: 'TEXT'
+
 
     AnchorLayout:
         anchor_x: 'left'
