--- a/src/screens/new_course_screen.kv
+++ b/src/screens/new_course_screen.kv
@@ -18,12 +18,12 @@ NewCourseScreenRoot:
         GridLayout
             rows: 6
             cols: 2
-            padding: 100
-            spacing: 75
+            padding: dp(100)
+            spacing: dp(75)
 
             Label:
                 size_hint_x: None
-                width: 300
+                width: dp(300)
                 text: 'Course Name:'
                 text_size: self.size
                 halign: 'right'
@@ -35,7 +35,7 @@ NewCourseScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: 300
+                width: dp(300)
                 text: 'Subject Code:'
                 text_size: self.size
                 halign: 'right'
@@ -47,7 +47,7 @@ NewCourseScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: 300
+                width: dp(300)
                 text: 'Credit Hours:'
                 text_size: self.size
                 halign: 'right'
@@ -59,7 +59,7 @@ NewCourseScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: 300
+                width: dp(300)
                 text: 'description'
                 text_size: self.size
                 halign: 'right'
@@ -71,7 +71,7 @@ NewCourseScreenRoot:
 
             Widget: # empty widget
                 size_hint_x: None
-                width: 80
+                width: dp(80)
 
             Button:
                 text: 'Back'
@@ -79,7 +79,7 @@ NewCourseScreenRoot:
 
             Widget: # empty widget
                 size_hint_x: None
-                width: 80
+                width: dp(80)
 
             Button:
                 text: 'Submit'
