--- a/src/screens/add_goal_grades_screen.kv
+++ b/src/screens/add_goal_grades_screen.kv
@@ -16,7 +16,7 @@ AddGoalGradesScreenRoot:
         anchor_x: 'left'
         anchor_y: 'bottom'
         size: (dp(100), dp(100))
-        padding: 10
+        padding: dp(2)
 
         Button:
             size_hint: (None, None)
