--- a/src/screens/add_new_screen.kv
+++ b/src/screens/add_new_screen.kv
@@ -27,7 +27,7 @@ AddNewScreenRoot:
         size: (dp(400), dp(240))
 
         GridLayout
-            rows: 6
+            rows: 7
             cols: 1
             padding: dp(5)
             spacing: dp(8)
@@ -55,3 +55,7 @@ AddNewScreenRoot:
             Button:
                 text: 'New Goal'
                 on_press: root.add_goal_callback()
+
+            Button:
+                text: 'New Course Goal'
+                on_press: root.add_course_goal_callback()
