--- a/src/screens/new_course_goal_screen.kv
+++ b/src/screens/new_course_goal_screen.kv
@@ -9,21 +9,21 @@
 # https://kivy.org/doc/stable/guide/lang.html
 #
 
-NewCourseScreenRoot:
+NewCourseGoalScreenRoot:
 
     AnchorLayout:
         center: root.center
-        size: (dp(1000), dp(1200))
+        size: (1000, 1200)
 
         GridLayout
-            rows: 6
+            rows: 4
             cols: 2
-            padding: dp(100)
-            spacing: dp(75)
+            padding: 100
+            spacing: 75
 
             Label:
                 size_hint_x: None
-                width: dp(100)
+                width: 300
                 text: 'Course Name:'
                 text_size: self.size
                 halign: 'right'
@@ -35,43 +35,19 @@ NewCourseScreenRoot:
 
             Label:
                 size_hint_x: None
-                width: dp(100)
-                text: 'Subject Code:'
+                width: 300
+                text: 'Goal ID:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
             TextInput:
-                id: subject_code
-                multiline: False
-                text: ''
-
-            Label:
-                size_hint_x: None
-                width: dp(100)
-                text: 'Credit Hours:'
-                text_size: self.size
-                halign: 'right'
-                valign: 'middle'
-            TextInput:
-                id: credit_hours
-                multiline: False
-                text: ''
-
-            Label:
-                size_hint_x: None
-                width: dp(100)
-                text: 'description'
-                text_size: self.size
-                halign: 'right'
-                valign: 'middle'
-            TextInput:
-                id: description
+                id: goal_id
                 multiline: False
                 text: ''
 
             Widget: # empty widget
                 size_hint_x: None
-                width: dp(80)
+                width: 80
 
             Button:
                 text: 'Back'
@@ -79,7 +55,7 @@ NewCourseScreenRoot:
 
             Widget: # empty widget
                 size_hint_x: None
-                width: dp(80)
+                width: 80
 
             Button:
                 text: 'Submit'
