Working on setting curriculum topics, still need to check for duplicates in a few areas

--- a/src/screens/add_new_screen.kv
+++ b/src/screens/add_new_screen.kv
@@ -59,3 +59,7 @@ AddNewScreenRoot:
             Button:
                 text: 'New Course Goal'
                 on_press: root.add_course_goal_callback()
+
+            Button:
+                text: 'New Course Topic'
+                on_press: root.add_course_topic_callback()
