--- a/src/screens/new_course_topic_screen.kv
+++ b/src/screens/new_course_topic_screen.kv
@@ -1,1 +1,62 @@
-# todo
+#:kivy 1.0
+
+#:import login_screen src.screens.main_screen
+
+# This script is written in kv script language
+# which makes our implementation a bit easier.
+# Documentation and syntax can be found at:
+#
+# https://kivy.org/doc/stable/guide/lang.html
+#
+
+NewCourseTopicScreenRoot:
+
+    AnchorLayout:
+        center: root.center
+        size: (1000, 1200)
+
+        GridLayout
+            rows: 4
+            cols: 2
+            padding: 100
+            spacing: 75
+
+            Label:
+                size_hint_x: None
+                width: 300
+                text: 'Course Name:'
+                text_size: self.size
+                halign: 'right'
+                valign: 'middle'
+            TextInput:
+                id: course_name
+                multiline: False
+                text: ''
+
+            Label:
+                size_hint_x: None
+                width: 300
+                text: 'Topic ID:'
+                text_size: self.size
+                halign: 'right'
+                valign: 'middle'
+            TextInput:
+                id: topic_id
+                multiline: False
+                text: ''
+
+            Widget: # empty widget
+                size_hint_x: None
+                width: 80
+
+            Button:
+                text: 'Back'
+                on_press: root.back_callback()
+
+            Widget: # empty widget
+                size_hint_x: None
+                width: 80
+
+            Button:
+                text: 'Submit'
+                on_press: root.submit_callback()
