Fixed a string declaration error

--- a/src/screens/new_curriculum_course_screen.kv
+++ b/src/screens/new_curriculum_course_screen.kv
@@ -48,7 +48,7 @@ NewCurriculumCourseScreenRoot:
             Label:
                 size_hint_x: None
                 width: 300
-                text: 'Required (Write 'Y' or 'N'):'
+                text: "Required (Write 'Y' or 'N'):"
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
