--- a/src/screens/new_course_screen.kv
+++ b/src/screens/new_course_screen.kv
@@ -1,6 +1,8 @@
 #:kivy 1.0
 
 #:import login_screen src.screens.main_screen
+#:import text_input_widgets src.widgets.text_input_widgets
+
 
 # This script is written in kv script language
 # which makes our implementation a bit easier.
@@ -11,76 +13,108 @@
 
 NewCourseScreenRoot:
 
+    Label:
+        width: root.width
+        height: root.height
+        size_hint: (None, None)
+        text_size: self.size
+        id: live_description_label
+        text: ''
+
     AnchorLayout:
-        center: root.center
-        size: (dp(1000), dp(1200))
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        size: (dp(100), dp(100))
+        padding: 10
+
+        Button:
+            size_hint: (None, None)
+            size: (dp(100), dp(30))
+            text: 'Back'
+            on_press: root.back_callback()
+
+    StackLayout:
+        orientation: 'lr-bt'
 
         GridLayout
+            pos_hint: (None, None)
+            size_hint: (None, None)
+            size: (root.width, dp(195))
             rows: 6
             cols: 2
-            padding: dp(100)
-            spacing: dp(75)
+            padding: dp(10)
+            spacing: dp(2)
 
             Label:
                 size_hint_x: None
-                width: dp(100)
+                width: dp(200)
+                height: dp(50)
                 text: 'Course Name:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
+
             TextInput:
+                on_text: root.update_live_description_callback()
                 id: course_name
                 multiline: False
                 text: ''
 
             Label:
                 size_hint_x: None
-                width: dp(100)
+                width: dp(200)
+                height: dp(50)
                 text: 'Subject Code:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
             TextInput:
+                on_text: root.update_live_description_callback()
                 id: subject_code
                 multiline: False
                 text: ''
 
             Label:
                 size_hint_x: None
-                width: dp(100)
+                width: dp(200)
+                height: dp(50)
                 text: 'Credit Hours:'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
-            TextInput:
+            IntTextInput:
+                on_text: root.update_live_description_callback()
                 id: credit_hours
                 multiline: False
                 text: ''
 
             Label:
                 size_hint_x: None
-                width: dp(100)
-                text: 'description'
+                width: dp(200)
+                height: dp(50)
+                text: 'Description'
                 text_size: self.size
                 halign: 'right'
                 valign: 'middle'
             TextInput:
+                on_text: root.update_live_description_callback()
                 id: description
                 multiline: False
                 text: ''
 
             Widget: # empty widget
                 size_hint_x: None
-                width: dp(80)
-
-            Button:
-                text: 'Back'
-                on_press: root.back_callback()
+                height: dp(50)
 
             Widget: # empty widget
                 size_hint_x: None
                 width: dp(80)
 
+            Widget: # empty widget
+                size_hint_x: None
+                height: dp(50)
+
             Button:
+                height: dp(50)
                 text: 'Submit'
                 on_press: root.submit_callback()
